# gosee

./: .gitignore  Cargo.toml  README.md  Trunk.toml  names_cache.json
client/: Cargo.toml  index.html
src/: client.rs  main.rs  mdns_record.rs  store.rs
