[package]
name = "gosee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
tokio = "1.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rkv = "0.18.4"
thiserror = "1.0.38"
rust-embed = "6.4.2"

[workspace]
members = ["client"]
